--- a/SourceCode/2023/Nov2023/Praveen/Task_2/Sequence.xaml
+++ b/SourceCode/2023/Nov2023/Praveen/Task_2/Sequence.xaml
@@ -44,7 +44,7 @@
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Sequence" sap:VirtualizedContainerService.HintSize="376,1214" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Arithmatic Operations" sap:VirtualizedContainerService.HintSize="376,1214" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="FirstNum" />
       <Variable x:TypeArguments="x:Int32" Name="SecondNum" />
